# repositorio_remoto

./: .readthedocs.yml  CHANGELOG.md  pyproject.toml
docs/: conf.py
docs/jupyter_execute/: example.ipynb
