[tool.poetry]
name = "holamundo"
version = "0.1.0"
description = "Hola Mundo! Con PySide6"
authors = ["Mónica Fasanar Bixquert"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
